feat: add receptionist and appointment workflow updates