@@ -6,13 +6,15 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
@@ -34,15 +36,35 @@ public class JwtFilter extends OncePerRequestFilter {
 
             if (jwtUtil.validateToken(token) && SecurityContextHolder.getContext().getAuthentication() == null) {
                 String username = jwtUtil.extractUsername(token);
+                String role = jwtUtil.extractRole(token);
+                Long doctorId = jwtUtil.extractDoctorId(token);
 
                 UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(username, null, Collections.emptyList());
-                authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                        new UsernamePasswordAuthenticationToken(
+                                username,
+                                null,
+                                role == null || role.isBlank()
+                                        ? List.of()
+                                        : List.of(new SimpleGrantedAuthority(role))
+                        );
+                authentication.setDetails(buildAuthenticationDetails(request, role, doctorId));
 
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
         }
 
         filterChain.doFilter(request, response);
+    }
+
+    private Map<String, Object> buildAuthenticationDetails(
+            HttpServletRequest request,
+            String role,
+            Long doctorId) {
+        Map<String, Object> details = new LinkedHashMap<>();
+        details.put("remoteAddress", request.getRemoteAddr());
+        details.put("sessionId", request.getRequestedSessionId());
+        details.put("role", role);
+        details.put("doctorId", doctorId);
+        return details;
     }
 }
